# rustatic

./: .gitignore  Cargo.toml  README.md
src/: a.txt  main.rs
src/db/: metadata.rs  mod.rs  user.rs
src/net/: delete.rs  download.rs  mod.rs  rename.rs  server.rs  upload.rs
src/pool/: mod.rs
tls/: dev-server.crt.der  dev-server.key.der
