[package]
name = "rustatic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.32.0", features = ["full"]}
nix = {version = "0.27.0", features = ["zerocopy", "mman", "ioctl"]}
core_affinity = "0.8.1"
socket2 = "0.5.4"
sysinfo = "0.29.10"
anyhow = "1.0.75"
