[package]
name = "rustatic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
nix = { version = "0.27.0", features = ["zerocopy", "mman", "ioctl"] }
flume = {version = "0.11.0", features = ["async"]}
anyhow = "1.0.75"
ahash = "0.8.3"
chrono = "0.4.31"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
rusqlite = {version = "0.29.0", features = ["bundled"]}
tokio-rusqlite = "0.4.0"
libsqlite3-sys = "0.26.0"
rustls = "0.21.7"
tokio-rustls = "0.24.1"
dashmap = "5.5.3"
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v4"] }
base64 = "0.21.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
coordinator = { git = "https://github.com/SuanCaiYv/coordinator"}
